syntax="proto3";

package position_service;
option go_package="genproto/position_service";

    
import "google/protobuf/empty.proto";

service PosAttrService {
    rpc Create(CreatePosAttrRequest) returns (PosAttr) {}
    rpc GetAll(GetAllPosAttrRequest) returns (GetAllPosAttrResponse) {}
    rpc GetById(GetByIdPosAttrRequest) returns (GetByIdPosAttrResponse) {}
    rpc Update(UpdatePosAttrRequest) returns (UpdatePosAttrResponse) {}
    rpc Delete(DeletePosAttrRequest) returns (DeletePosAttrResponse) {}
}

message CreatePosAttrRequest {
    
    string attribute_id = 1;
    string position_id = 2;
    string value = 3;
}

message PosAttr {
    string id = 1;
    string attribute_id = 2;
    string position_id = 3;
    string value = 4;
}

message GetAllPosAttrRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllPosAttrResponse {
    repeated PosAttr PosAttrs = 1;
    int32 count = 2;
}

message GetByIdPosAttrRequest {
    string id = 1;
}

message GetByIdPosAttrResponse {
    string id = 1;
    string attribute_id = 2;
    string position_id = 3;
    string value = 4;
}

message UpdatePosAttrRequest {
    string id = 1;
    string attribute_id = 2;
    string position_id = 3;
    string value = 4;
}

message UpdatePosAttrResponse {
    string id = 1;
    string attribute_id = 2;
    string position_id = 3;
    string value = 4;
}
message DeletePosAttrRequest {
    string id = 1;
}

message DeletePosAttrResponse {
    string id = 1;
}